apps/lidarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      containers:
        - name: lidarr
          image: lscr.io/linuxserver/lidarr:nightly
          ports:
            - name: web
              containerPort: 8686
          readinessProbe:
            tcpSocket:
              port: 8686
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8686
            initialDelaySeconds: 60
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1
              memory: 1Gi
          volumeMounts:
            - name: lidarr-config
              mountPath: /config
            - name: transmission-data
              mountPath: /data
            - name: music
              mountPath: /music
            - name: tools
              mountPath: /tools
      volumes:
        - name: lidarr-config
          persistentVolumeClaim:
            claimName: lidarr-config
        - name: transmission-data
          persistentVolumeClaim:
            claimName: transmission-data
        - name: music
          hostPath:
            path: /var/lib/k8s-local-storage/navidrome/music
            type: DirectoryOrCreate
        - name: tools
          emptyDir: {}
