apps/lidarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: transmission
spec:
  type: ClusterIP
  selector:
    app: lidarr
  ports:
    - name: web
      port: 8686
      targetPort: 8686
