apps/lidarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidarr
  namespace: transmission
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: lidarr.def4alt.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lidarr
                port:
                  number: 8686
  tls:
    - secretName: lidarr-tls
      hosts:
        - lidarr.def4alt.com
